# OGLFontRendering

./: .gitignore  CMakeLists.txt  README.md  gitlog.tex
Control/: buildLinux.sh  buildWin.ps1  run.sh
Control/cmake/: FindGLEW.cmake  FindSDL2.cmake
Src/3thParty/glm/glm/detail/: setup.hpp
Src/3thParty/poly2tri/: Tutorial.txt
Src/3thParty/poly2tri/poly2tri/sweep/: sweep.cc
Src/GFX/: CMakeLists.txt
Src/GFX/Doc/: App.txt  App.uxf
Src/GFX/Src/: App.cpp  App.hpp  main.cpp
Src/Ragna/: CMakeLists.txt  Ragna Lib.uxf
Src/Ragna/Doc/: Object.txt
Src/Ragna/Src/: Button.cpp  Button.hpp  CardLayout.cpp  CardLayout.hpp  Image.cpp  Image.hpp  Layout.cpp  Layout.hpp  Material.cpp  Material.hpp  Menu.cpp  Menu.hpp  Panel.cpp  Panel.hpp  Ragna.hpp  Text.cpp  Text.hpp  View.cpp  View.hpp
Src/Ragna/Src/Core/: Core.cpp  Core.hpp  Event.cpp  Event.hpp  Glyph.cpp  Glyph.hpp  Molten.cpp  Molten.hpp  Object.cpp  Object.hpp  Rect.cpp  Rect.hpp
Src/Ragna/Src/Core/Shaders/: BasicShader.cpp  BasicShader.hpp  CurveShader.cpp  CurveShader.hpp  Shader.cpp  Shader.hpp  TextureShader.cpp  TextureShader.hpp
Src/Ragna/Test/: CardLayoutTest.cpp  CardLayoutTest.hpp  RagnaUnitTest.cpp  RectTest.cpp  RectTest.hpp
Src/Ragna/Utils decrepated/: ITriangulator.cpp  ITriangulator.hpp  Poly.cpp  Poly.hpp  Poly2Tri.cpp  Poly2Tri.hpp  PolygonTest.cpp  PolygonTest.hpp  StrObject.cpp  StrObject.hpp
Src/Runic/: CMakeLists.txt
Src/Runic/Doc/: RBinary.uxf  Runic.uxf  RunicTypes.uxf  frame.pdn  umlet.cpp
Src/Runic/Src/: Runic.hpp  RunicBinary.cpp  RunicBinary.hpp  RunicCmapTable.cpp  RunicCmapTable.hpp  RunicEndian.cpp  RunicEndian.hpp  RunicExceptions.cpp  RunicExceptions.hpp  RunicFont.cpp  RunicFont.hpp  RunicGlyph.cpp  RunicGlyph.hpp  RunicGlyphTable.cpp  RunicGlyphTable.hpp  RunicHeadTable.cpp  RunicHeadTable.hpp  RunicLoader.cpp  RunicLoader.hpp  RunicLocaTable.cpp  RunicLocaTable.hpp  RunicMaxpTable.cpp  RunicMaxpTable.hpp  RunicNameTable.cpp  RunicNameTable.hpp  RunicRange.cpp  RunicRange.hpp  RunicTriangulator.cpp  RunicTriangulator.hpp  RunicTypes.cpp  RunicTypes.hpp
Src/Runic/Test/: RunicTest.cpp  RunicUnitTest.cpp
Src/SDL/: CMakeLists.txt
Src/SDL/Doc/: SDLCXX.txt  SDLCXX.uxf
Src/SDL/Src/: FrameWindow.cpp  FrameWindow.hpp  SDLCXX.hpp
Src/SDL/Test/: main.cpp
